--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@mysten/dapp-kit": "^0.14.53",
     "@mysten/sui": "^1.27.1",
+    "@mysten/wallet-standard": "^0.14.5",
     "@tanstack/react-query": "^5.74.3",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
@@ -26,5 +27,11 @@
     "react-dom": "^18.3.1",
     "ts-sdk": "^0.5.1",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4"
   }
 }
