--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@mysten/dapp-kit": "^0.14.53",
     "@mysten/sui": "^1.27.1",
+    "@mysten/sui.js": "^0.54.1",
     "@mysten/wallet-standard": "^0.14.5",
     "@tanstack/react-query": "^5.74.3",
     "@types/node": "^22.14.1",
