--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,13 @@
   "directories": {
     "lib": "lib"
   },
+  "homepage": "https://JustinCho-Crypto.github.io/charui",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d .next",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -26,6 +29,7 @@
     "@types/react": "^19.1.2",
     "form-data": "^4.0.2",
     "formidable": "^3.5.2",
+    "gh-pages": "^6.3.0",
     "next": "^15.3.0",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
